Admin: Security Hardening (XSS) and Sitemap Generator

--- a/admin.html
+++ b/admin.html
@@ -448,6 +448,8 @@
                 <button class="tab-btn active" onclick="switchTab('products')">📦 Produtos (<span
                         id="count">0</span>)</button>
                 <button class="tab-btn" onclick="switchTab('addProduct')" id="add-tab-btn">➕ Adicionar Produto</button>
+                <button class="tab-btn" onclick="window.generateSitemap()" style="margin-left: auto;">🗺️ Gerar
+                    Sitemap</button>
             </div>
 
             <!-- Products Tab -->
